2009-07-31  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpChannelFactory.cs, TcpDuplexSessionChannel.cs,
	  TcpRequestChannel.cs : use Via uri to validate and connect.

2009-07-31  Atsushi Enomoto  <atsushi@ximian.com>

	* RequestChannelBase.cs, DuplexChannelBase.cs :
	  Return endpoint address Uri when no explicit Via uri is specified.
	* ChannelFactoryBase.cs : Remove extra async close methods.
	  Add async open methods. Reject null EndpointAddress.
	* PeerChannelFactory.cs : remove async open methods (now in base).

2009-07-31  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerDuplexChannel.cs : set correct message endpoint (To header).

2009-07-31  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpDuplexSessionChannel.cs, PeerDuplexChannel.cs,
	  DuplexChannelBase.cs : set LocalAddress property at base.

2009-07-30  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerDuplexChannel.cs : ongoing refactoring to work both as
	  listener and client. Now it creates a listening peer node, and
	  creates a set of TCP client channels for each peer in the mesh.

	  (EndpointAddress must be fixed to not filter out correct inputs).

2009-07-30  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerChannelListener.cs : do not accept more than one channel
	  which results in lots of listening peer node. Only one is enough.

2009-07-30  Atsushi Enomoto  <atsushi@ximian.com>

	* DuplexChannelBase.cs : fix wrong loop implementation.

2009-07-28  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpChannelListener.cs : to avoid creating two or more channels
	  for one remote endpoint, check existing remote endpoints and
	  ignore such connections (it must be handled in different thread
	  fired by ChannelDispatcher loop).

2009-07-28  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpReplyChannel.cs : make sure to not try to receive request when
	  it is already closed.

2009-07-28  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpChannelListener.cs, TcpDuplexSessionChannel.cs :