@@ -127,19 +127,13 @@ namespace System.ServiceModel.Channels
 	{
 		HttpTransportBindingElement source;
 		BindingContext context;
-		Uri listen_uri;
 		List<TChannel> channels = new List<TChannel> ();
 		MessageEncoder encoder;
 
 		public HttpChannelListenerBase (HttpTransportBindingElement source,
 			BindingContext context)
-			: base (context.Binding)
+			: base (context)
 		{
-
-			// FIXME: consider ListenUriMode
-			// FIXME: there should be some way to post-provide Uri in case of null listenerUri in context.
-			listen_uri = context.ListenUriBaseAddress != null ?
-				new Uri (context.ListenUriBaseAddress, context.ListenUriRelativeAddress) : null;
 			foreach (BindingElement be in context.RemainingBindingElements) {
 				MessageEncodingBindingElement mbe = be as MessageEncodingBindingElement;
 				if (mbe != null) {
@@ -153,10 +147,6 @@ namespace System.ServiceModel.Channels
 
 		public MessageEncoder MessageEncoder {
 			get { return encoder; }
-		}
-
-		public override Uri Uri {
-			get { return listen_uri; }
 		}
 
 		protected IList<TChannel> Channels {
